# ColorTransfer

./: .gitignore  CMakeLists.txt  Image.h  README.md  main.cpp
